@@ -1,3 +1,7 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -0.1.0-0
+- Add v2 compliance_markup data
+- Add support for puppetlabs-stdlib 6
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.4-0
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
